--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -11,19 +11,18 @@ input {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 $terminal = kitty
-$fileManager = dolphin
 $menu = rofi -show drun
 
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
+bind = $mainMod, T, exec, $terminal
+bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, f5, exec, ~/.config/hypr/scripts/reload.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -55,13 +54,19 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# submap for resizing with arrow keys
+bind = $mainMod, Q, submap, resize
+submap = resize
+binde = SHIFT, right, resizeactive, 10 0
+binde = SHIFT, left, resizeactive, -10 0
+binde = SHIFT, up, resizeactive, 0 10
+binde = SHIFT, down, resizeactive, 0 -10
+binde = , right, resizeactive, 50 0
+binde = , left, resizeactive, -50 0
+binde = , up, resizeactive, 0 50
+binde = , down, resizeactive, 0 -50
+bind = , escape, submap, reset
+submap = reset
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
