--- a/.config/hypr/looks.conf
+++ b/.config/hypr/looks.conf
@@ -1,12 +1,12 @@
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 2.5
+    gaps_out = 5
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(a84260ff)
+    col.inactive_border = rgba(225522ff)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -27,16 +27,13 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
+        enabled = false
     }
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 2
         passes = 1
 
         vibrancy = 0.1696
