--- a/.config/hypr/monitors.conf
+++ b/.config/hypr/monitors.conf
@@ -1,2 +1,2 @@
-monitor=HDMI-A-5,1280x1024,0x0,auto
-monitor=DP-4,1920x1080,1280x0,auto
+monitor=HDMI-A-5,1280x1024,0x0,1
+monitor=DP-4,1920x1080,1280x0,1
